change to frontend

--- a/src/interactive_frontend.ipynb
+++ b/src/interactive_frontend.ipynb
@@ -219,27 +219,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 75,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'special' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-74-99f4e7d9dcce>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplacehold_s_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplaceholder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfn_send_input_options\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mplacehold_s_df\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/OneDrive/Documents/UWMSDS/515/death_simulator/src/placeholder.py\u001b[0m in \u001b[0;36mfn_send_input_options\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'special' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>exercise</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>diabetic</th>\n",
+       "      <th>mcdonalds</th>\n",
+       "      <th>new_gender</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Daily</td>\n",
+       "      <td>18</td>\n",
+       "      <td>3ft something</td>\n",
+       "      <td>less than 150lbs</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Today</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5 times a week</td>\n",
+       "      <td>19</td>\n",
+       "      <td>4ft something</td>\n",
+       "      <td>around 160lbs</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yesterday</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4 times a week</td>\n",
+       "      <td>20</td>\n",
+       "      <td>5ft something</td>\n",
+       "      <td>around 170lbs</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Recently</td>\n",
+       "      <td>Unspecified</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>couple times a week</td>\n",
+       "      <td>21</td>\n",
+       "      <td>6ft something</td>\n",
+       "      <td>around 180lbs</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Last Month</td>\n",
+       "      <td>Non-Binary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>rarely</td>\n",
+       "      <td>22</td>\n",
+       "      <td>7ft something</td>\n",
+       "      <td>around 190lbs</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Never</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>never</td>\n",
+       "      <td>23</td>\n",
+       "      <td>8ft something</td>\n",
+       "      <td>200lbs or larger</td>\n",
+       "      <td>No</td>\n",
+       "      <td>McDonalds?</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              exercise  bmi         height            weight diabetic  \\\n",
+       "0                Daily   18  3ft something  less than 150lbs      Yes   \n",
+       "1       5 times a week   19  4ft something     around 160lbs       No   \n",
+       "2       4 times a week   20  5ft something     around 170lbs      Yes   \n",
+       "3  couple times a week   21  6ft something     around 180lbs       No   \n",
+       "4               rarely   22  7ft something     around 190lbs      Yes   \n",
+       "5                never   23  8ft something  200lbs or larger       No   \n",
+       "\n",
+       "    mcdonalds   new_gender  \n",
+       "0       Today       Female  \n",
+       "1   Yesterday         Male  \n",
+       "2    Recently  Unspecified  \n",
+       "3  Last Month   Non-Binary  \n",
+       "4       Never         Male  \n",
+       "5  McDonalds?         Male  "
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "placehold_s_df = placeholder.fn_send_input_options()\n",
+    "placehold_s_df = placehold.fn_send_input_options()\n",
     "placehold_s_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s_df = placehold_s_df"
    ]
   },
   {
@@ -276,13 +390,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95d60674c0f543499d45ad30e887f7ae",
+       "model_id": "ffced954ef8c48d2a8a88bfdf68218ca",
        "version_major": 2,
        "version_minor": 0
       },
