add saved lines to front

--- a/src/interactive_frontend.ipynb
+++ b/src/interactive_frontend.ipynb
@@ -449,11 +449,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "occ: 21\n",
+    "gender: 2\n",
+    "race: 4\n",
+    "age: 101"
+   ]
   },
   {
    "cell_type": "code",
