add requirements.txt imports

--- a/src/interactive_frontend.ipynb
+++ b/src/interactive_frontend.ipynb
@@ -31,6 +31,9 @@
     "import print_death_cert\n",
     "input_options_dict = placehold.fn_send_input_options()\n",
     "\n",
+    "#this is for enabling user download of PDF\n",
+    "from IPython.core.display import display, HTML\n",
+    "\n",
     "#import dict of input options from the backend python module"
    ]
   },
@@ -43,7 +46,12 @@
     "#TODO\n",
     "#1. Function in backend that accepts the input list and returns the output list\n",
     "#2. Unit test around this function to do validation\n",
-    "#3. "
+    "#3. figure out how to use ipywidgets to generate the collected inputs dict\n",
+    "#4. heavily test binder\n",
+    "\n",
+    "#Enable dark theme in Jupyter in Binder#\n",
+    "#INCLUDE jupyterthemes\n",
+    "#postBuild file in Binder to run this shell command \"jt -t chesterish\""
    ]
   },
   {
@@ -54,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ec49ea7638c4f16ac8d351bee70e498",
+       "model_id": "637e404f52d3465485ad7c075470ba98",
        "version_major": 2,
        "version_minor": 0
       },
@@ -80,6 +88,29 @@
     "                              McDonalds=sorted(input_options_dict[\"mcdonalds\"])):\n",
     "    #return \"You will die of Atherosclerotic heart disease at the age of 88 years old on May 20th, 2080\"\n",
     "    return placehold.fn_send_output_string(input_options_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<a href=\"https://github.com/ThomasWinegarden/death_simulator/raw/master/docs/death_certificate_template.pdf\">Download your Pre-Death Certificate</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#TODO: need to dynamically determine the URL of the Binder instance to give the href url below\n",
+    "display(HTML(\"\"\"<a href=\"https://github.com/ThomasWinegarden/death_simulator/raw/master/docs/death_certificate_template.pdf\">Download your Pre-Death Certificate</a>\"\"\"))"
    ]
   },
   {
