adding in 85 plus extrapolation code

--- a/src/population_85_plus.ipynb
+++ b/src/population_85_plus.ipynb
@@ -1,6 +1,93 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn import linear_model\n",
+    "\n",
+    "#load separated txt datasets\n",
+    "deaths01 = pd.read_csv(\"../data_raw/mortality_ages_0-10.txt\", sep = \"\\t\", encoding = \"ISO-8859-1\")\n",
+    "deaths02 = pd.read_csv(\"../data_raw/mortality_ages_11-15.txt\", sep = \"\\t\", encoding = \"ISO-8859-1\")\n",
+    "deaths03 = pd.read_csv(\"../data_raw/mortality_ages_16-20.txt\", sep = \"\\t\", encoding = \"ISO-8859-1\")\n",
+    "deaths04 = pd.read_csv(\"../data_raw/mortality_ages_21-25.txt\", sep = \"\\t\", encoding = \"ISO-8859-1\")\n",
+    "deaths05 = pd.read_csv(\"../data_raw/mortality_ages_26-30.txt\", sep = \"\\t\", encoding = \"ISO-8859-1\")\n",
+    "deaths06 = pd.read_csv(\"../data_raw/mortality_ages_31-35.txt\", sep = \"\\t\", encoding = \"ISO-8859-1\")\n",
+    "deaths07 = pd.read_csv(\"../data_raw/mortality_ages_36-40.txt\", sep = \"\\t\", encoding = \"ISO-8859-1\")\n",
+    "deaths08 = pd.read_csv(\"../data_raw/mortality_ages_41-45.txt\", sep = \"\\t\", encoding = \"ISO-8859-1\")\n",
+    "deaths09 = pd.read_csv(\"../data_raw/mortality_ages_46-50.txt\", sep = \"\\t\", encoding = \"ISO-8859-1\")\n",
+    "deaths10 = pd.read_csv(\"../data_raw/mortality_ages_51-55.txt\", sep = \"\\t\", encoding = \"ISO-8859-1\")\n",
+    "deaths11 = pd.read_csv(\"../data_raw/mortality_ages_56-60.txt\", sep = \"\\t\", encoding = \"ISO-8859-1\")\n",
+    "deaths12 = pd.read_csv(\"../data_raw/mortality_ages_61-65.txt\", sep = \"\\t\", encoding = \"ISO-8859-1\")\n",
+    "deaths13 = pd.read_csv(\"../data_raw/mortality_ages_66-70.txt\", sep = \"\\t\", encoding = \"ISO-8859-1\")\n",
+    "deaths14 = pd.read_csv(\"../data_raw/mortality_ages_71-75.txt\", sep = \"\\t\", encoding = \"ISO-8859-1\")\n",
+    "deaths15 = pd.read_csv(\"../data_raw/mortality_ages_76-80.txt\", sep = \"\\t\", encoding = \"ISO-8859-1\")\n",
+    "deaths16 = pd.read_csv(\"../data_raw/mortality_ages_81-85.txt\", sep = \"\\t\", encoding = \"ISO-8859-1\")\n",
+    "deaths17 = pd.read_csv(\"../data_raw/mortality_ages_86-90.txt\", sep = \"\\t\", encoding = \"ISO-8859-1\")\n",
+    "deaths18 = pd.read_csv(\"../data_raw/mortality_ages_91-95.txt\", sep = \"\\t\", encoding = \"ISO-8859-1\")\n",
+    "deaths19 = pd.read_csv(\"../data_raw/mortality_ages_96-100_plus.txt\", sep = \"\\t\", encoding = \"ISO-8859-1\")\n",
+    "\n",
+    "#put together dataset\n",
+    "deaths = pd.concat([deaths01, deaths02, deaths03, deaths04, deaths05, deaths06, deaths07, deaths08, deaths09,\n",
+    "                   deaths10, deaths11, deaths12, deaths13, deaths14, deaths15, deaths16, deaths17, deaths18,\n",
+    "                   deaths19])\n",
+    "\n",
+    "#filter dataset by columns\n",
+    "deaths = deaths[['Single-Year Ages Code', 'Gender', 'Race', 'Injury Mechanism & All Other Leading Causes',\n",
+    "                 'Cause of death', 'Deaths', 'Population']]\n",
+    "\n",
+    "#rename columns \n",
+    "deaths.columns = ['age','gender','race','mechanism_of_death','cause_of_death','deaths','population']\n",
+    "\n",
+    "#replace Not Applicable with NaN null values\n",
+    "deaths = deaths.replace('Not Applicable', np.NaN)\n",
+    "\n",
+    "#convert population to float\n",
+    "deaths['population'] = deaths['population'].astype('float')\n",
+    "\n",
+    "#collect extrapolated population numbers\n",
+    "pred_dfs = []\n",
+    "for race in deaths.race.unique():\n",
+    "    for sex in deaths.gender.unique():\n",
+    "        temp_df = deaths[(deaths.race == race)&(deaths.gender == sex)&(deaths.age >= 70)][['age','population']].drop_duplicates()\n",
+    "        reg = linear_model.LinearRegression()\n",
+    "        reg.fit(X=np.array(temp_df[temp_df.age < 85]['age']).reshape(-1,1), y = np.array(temp_df[temp_df.age < 85]['population']))\n",
+    "        y_pred = np.clip(reg.predict(np.array(temp_df[temp_df.age >= 85]['age']).reshape(-1,1)), a_min = 0, a_max = float('inf')).round()\n",
+    "        x_pred = range(85,101)\n",
+    "        pred_df = pd.DataFrame({'age':x_pred,'pred_population':y_pred, 'race':race, 'gender':sex})\n",
+    "        pred_dfs.append(pred_df)\n",
+    "pred_df_full = pd.concat(pred_dfs)\n",
+    "\n",
+    "#load extrapolated dataset and replace with null population values\n",
+    "deaths = deaths.merge(pred_df_full, left_on=['age', 'gender', 'race'], right_on=['age', 'gender', 'race'], how = 'left')\n",
+    "deaths['population']=deaths['population'].mask(pd.isnull, deaths['pred_population'])\n",
+    "deaths = deaths.drop('pred_population', axis=1)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
