added updated component specs

--- a/src/probability_converter.ipynb
+++ b/src/probability_converter.ipynb
@@ -1595,6 +1595,33 @@
     "annualDeathProbs_age_gender_race.to_csv('../data/annualDeathProbs_age_gender_race.csv', index = False)\n",
     "annualCauseofDeathProbs_age_gender_race.to_csv('../data/annualCauseofDeathProbs_age_gender_race.csv', index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3753"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(np.unique(annualCauseofDeathProbs_age_gender_race.cause_of_death))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
