updates on frontend

--- a/death_simulator/interactive_frontend_v1.ipynb
+++ b/death_simulator/interactive_frontend_v1.ipynb
@@ -27,9 +27,9 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import placehold_deathSim\n",
+    "import placehold_deathSimulator\n",
     "import print_death_cert\n",
-    "input_options_dict = placehold_deathSim.fn_send_input_options()\n",
+    "input_options_dict = placehold_deathSimulator.fn_send_input_options()\n",
     "\n",
     "#this is for enabling user download of PDF\n",
     "from IPython.core.display import display, HTML\n",
@@ -56,24 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83e9851b777846b6bc7b405119ffee78",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='Age', options=(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 1…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "@interact_manual\n",
     "def collect_inputs_manual_gen(Age=input_options_dict[\"age\"],\n",
@@ -88,7 +73,9 @@
     "                              McDonalds=sorted(input_options_dict[\"mcdonalds\"])):\n",
     "    input_options_dict = {'age':Age, 'job':Occupation, 'gender':Gender, 'race':Race, 'exc':Exercise, 'bmi':BMI, 'height':Height, 'weight':Weight,'McD': McDonalds}\n",
     "    #return \"You will die of Atherosclerotic heart disease at the age of 88 years old on May 20th, 2080\"\n",
-    "    return placehold_deathSim.fn_send_output_string(input_options_dict)"
+    "    return placehold_deathSim.fn_send_output_string(input_options_dict)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -100,10 +87,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'name' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-6a790586a36e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#TODO: need to dynamically determine the URL of the Binder instance to give the href url below\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mHTML\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\"\"<a href=\"../docs/death_certificate_{}.pdf\">Right-Click and Save Link As... to download your Pre-Death Certificate</a>\"\"\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\" \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"%20\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'name' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#TODO: need to dynamically determine the URL of the Binder instance to give the href url below\n",
+    "display(HTML(\"\"\"<a href=\"../docs/death_certificate_{}.pdf\">Right-Click and Save Link As... to download your Pre-Death Certificate</a>\"\"\".format(name.replace(\" \", \"%20\")))"
+   ]
   },
   {
    "cell_type": "code",
@@ -580,7 +582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
