adding in name and link on output for interactive output

--- a/death_simulator/interactive_frontend_v1.ipynb
+++ b/death_simulator/interactive_frontend_v1.ipynb
@@ -73,9 +73,7 @@
     "                              McDonalds=sorted(input_options_dict[\"mcdonalds\"])):\n",
     "    input_options_dict = {'age':Age, 'job':Occupation, 'gender':Gender, 'race':Race, 'exc':Exercise, 'bmi':BMI, 'height':Height, 'weight':Weight,'McD': McDonalds}\n",
     "    #return \"You will die of Atherosclerotic heart disease at the age of 88 years old on May 20th, 2080\"\n",
-    "    return placehold_deathSim.fn_send_output_string(input_options_dict)\n",
-    "\n",
-    "\n"
+    "    return placehold_deathSimulator.fn_send_output_string(input_options_dict)['result'], display(HTML(\"\"\"<a href=\"../docs/death_certificate_{}.pdf\">Right-Click and Save Link As... to download your Pre-Death Certificate</a>\"\"\".format(placehold_deathSimulator.fn_send_output_string(input_options_dict)['name'].replace(\" \", \"%20\"))))\n"
    ]
   },
   {
