adding in name variable and fixing simulator function to make "description" key instead of "result"

--- a/death_simulator/interactive_frontend_v1.ipynb
+++ b/death_simulator/interactive_frontend_v1.ipynb
@@ -56,12 +56,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d6c235c01e584b8f8623776497f1f751",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Text(value='', description='Name'), Dropdown(description='Age', options=(0, 1, 2, 3, 4, …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "@interact_manual\n",
-    "def collect_inputs_manual_gen(Age=input_options_dict[\"age\"],\n",
+    "def collect_inputs_manual_gen(Name=input_options_dict[\"name\"],\n",
+    "                              Age=input_options_dict[\"age\"],\n",
     "                              Occupation=sorted(input_options_dict[\"occupation\"]),\n",
     "                              Gender=sorted(input_options_dict[\"new_gender\"]),\n",
     "                              Race=sorted(input_options_dict[\"race\"]),\n",
@@ -71,9 +87,9 @@
     "                              #be careful of how this is sorted\n",
     "                              Weight=sorted(input_options_dict[\"weight\"]),\n",
     "                              McDonalds=sorted(input_options_dict[\"mcdonalds\"])):\n",
-    "    input_options_dict = {'age':Age, 'job':Occupation, 'gender':Gender, 'race':Race, 'exc':Exercise, 'bmi':BMI, 'height':Height, 'weight':Weight,'McD': McDonalds}\n",
+    "    input_options_dict = {'name':Name, 'age':Age, 'job':Occupation, 'gender':Gender, 'race':Race, 'exc':Exercise, 'bmi':BMI, 'height':Height, 'weight':Weight,'McD': McDonalds}\n",
     "    #return \"You will die of Atherosclerotic heart disease at the age of 88 years old on May 20th, 2080\"\n",
-    "    return placehold_deathSimulator.fn_send_output_string(input_options_dict)['result'], display(HTML(\"\"\"<a href=\"../docs/death_certificate_{}.pdf\">Right-Click and Save Link As... to download your Pre-Death Certificate</a>\"\"\".format(placehold_deathSimulator.fn_send_output_string(input_options_dict)['name'].replace(\" \", \"%20\"))))\n"
+    "    return placehold_deathSimulator.fn_send_output_string(input_options_dict)['description'], display(HTML(\"\"\"<a href=\"../docs/death_certificate_{}.pdf\">Right-Click and Save Link As... to download your Pre-Death Certificate</a>\"\"\".format(placehold_deathSimulator.fn_send_output_string(input_options_dict)['name'].replace(\" \", \"%20\"))))\n"
    ]
   },
   {
